SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  klindsay, mlevy
Tag Date:    1 Sept 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150901
Tag Summary: Fix CO3comp timer calls (start and stop inside a k-loop)

Files Modified:
M       source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  andre, klindsay, mclong, mlevy, mvertens
Tag Date:    31 Aug 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150831
Tag Summary: Merge MARBL development onto trunk (working towards
             POP-independent biogeochemistry library)

Files Modified:
M       bld/build-namelist
A       cimetest/testmods_dirs/pop/ecosys_3steps
A       cimetest/testmods_dirs/pop/ecosys_3steps/shell_commands
A       cimetest/testmods_dirs/pop/ecosys_3steps/user_nl_pop
M       source/abio_dic_dic14_mod.F90
M       source/co2calc.F90
A       source/co2calc_column.F90
M       source/constants.F90
M       source/ecosys_ciso_mod.F90
M       source/ecosys_constants.F90
M       source/ecosys_driver.F90
M       source/ecosys_mod.F90
M       source/ecosys_parms.F90
M       source/ecosys_restore.F90
M       source/ecosys_share.F90
A       source/ecosys_tavg.F90
A       source/marbl_interface.F90
A       source/marbl_interface_constants.F90
A       source/marbl_interface_types.F90
A       source/marbl_kinds.F90
A       source/marbl_oxygen.F90
A       source/marbl_parms.F90
A       source/marbl_share.F90
M       source/passive_tracers.F90
A       source/schmidt_number.F90
M       source/tavg.F90
===============================================================================
Tag Creator: mlevy
Developers:  mmills, andre
Tag Date:    16 Aug 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150816a
Tag Summary: Two updates to build-namelist
             (1) as pointed out in Bug 2181, logic to determine starting day