@@ -4,6 +4,16 @@ SVN $URL$
 Tag Creator: mlevy
 Developers:  klindsay, mlevy
 Tag Date:    1 Sept 2015
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150901a
+Tag Summary: Fix CO3comp timer performance (start and stop are now both
+             outside the k-loop)
+
+Files Modified:
+M       source/ecosys_mod.F90
+===============================================================================
+Tag Creator: mlevy
+Developers:  klindsay, mlevy
+Tag Date:    1 Sept 2015
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150901
 Tag Summary: Fix CO3comp timer calls (start and stop inside a k-loop)
 
